# axin

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: 01_basic_prologue.rs  02_entry_exit.rs  03_decorators.rs  04_combined_features.rs  05_real_world.rs  README.md  run_all_examples.sh
src/: args.rs  generator.rs  lib.rs
tests/: integration_test.rs
