[package]
name = "axin"
version = "0.2.0-dev"
edition = "2021"
authors = [ "aarkegz <aarkegz@gmail.com>" ]
description = "A Rust procedural macro library for function instrumentation"
license = "MIT"
repository = "https://github.com/GeminiLab/axin"
documentation = "https://docs.rs/axin"
keywords = ["macro", "instrumentation", "aop", "decorator", "procedural"]
categories = ["development-tools", "rust-patterns"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3.1.0"
